# tini-backend

./: Cargo.toml  README.md  index.html  index.js  ota.json  run.sh  shell.nix
ota/: config.json
src/: main.rs
